--- a/app/src/main/res/layout-large-land/fragment_itemlist.xml
+++ b/app/src/main/res/layout-large-land/fragment_itemlist.xml
@@ -7,8 +7,8 @@
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_drawer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.35"/>
 
