--- a/app/src/main/res/layout-large-land/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-large-land/item_details_buy_fragment.xml
@@ -314,6 +314,22 @@
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
 
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fab_star"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="#FFFFFF"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:paddingBottom="8dp"
+                    android:scaleType="center"
+                    android:src="@android:drawable/btn_star"
+                    app:fabSize="normal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
                 <Button
                     android:id="@+id/buyButton"
                     android:layout_width="0dp"
