layout large land fix of fix

--- a/app/src/main/res/layout-large-land/fragment_on_sale_list.xml
+++ b/app/src/main/res/layout-large-land/fragment_on_sale_list.xml
@@ -7,11 +7,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerItemList"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline_drawer"/>
 
@@ -30,7 +31,7 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline_drawer"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -39,7 +40,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline_drawer"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/btn_loggedout"/>
 
