--- a/app/src/main/res/menu/item_edit_menu.xml
+++ b/app/src/main/res/menu/item_edit_menu.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/save_action"
+        android:icon="@android:drawable/ic_menu_save"
         android:orderInCategory="100"
         android:title="@string/save_edit"
-        app:showAsAction="never"/>
+        app:showAsAction="always" />
 </menu>
