--- a/app/src/main/res/layout-large-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-large-land/fragment_item_edit.xml
@@ -27,6 +27,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0"
+                android:layout_marginTop="16dp"
                 app:layout_constraintVertical_chainStyle="packed" />
 
             <ImageButton
