--- a/app/src/main/res/layout-large/fragment_item_edit.xml
+++ b/app/src/main/res/layout-large/fragment_item_edit.xml
@@ -20,6 +20,7 @@
             app:layout_constraintBottom_toTopOf="@id/picture_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
