--- a/app/src/main/res/layout-large/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-large/item_details_buy_fragment.xml
@@ -21,6 +21,7 @@
             app:layout_constraintEnd_toStartOf="@+id/central_guideline"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
             app:layout_constraintVertical_chainStyle="packed" />
