--- a/app/src/main/res/layout/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout/item_details_buy_fragment.xml
@@ -18,6 +18,7 @@
 
             <ImageView
                 android:id="@+id/item_picture"
+                android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:scaleType="fitCenter"
