--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,11 +22,14 @@
             android:title="Favorite Items"
             app:showAsAction="always" />
 
+        <item
+            android:id="@+id/ItemBoughtFragment"
+            android:title="Bought Items"
+            app:showAsAction="always"/>
+
         <item android:title="@string/logout"
             android:id="@+id/logout_action"
             android:icon="@drawable/logout_icon"
             app:showAsAction="always"/>
-
-
     </group>
 </menu>
