--- a/app/src/main/res/layout/fragment_show_profile.xml
+++ b/app/src/main/res/layout/fragment_show_profile.xml
@@ -89,6 +89,14 @@
             app:layout_constraintStart_toStartOf="@id/textViewFullNameShowProfile"
             app:layout_constraintTop_toBottomOf="@+id/textViewUserEmailShowProfile" />
 
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="@+id/VerticalGuideShowProfile"
+            app:layout_constraintTop_toBottomOf="@+id/textViewUserLocationShowProfile" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/VerticalGuideShowProfile"
             android:layout_width="wrap_content"
