--- a/app/src/main/res/layout-land/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-land/item_details_buy_fragment.xml
@@ -104,6 +104,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:text="@string/username"
                 app:layout_constraintBaseline_toBaselineOf="@+id/seller"
                 app:layout_constraintStart_toEndOf="@+id/seller" />
