--- a/app/src/main/res/layout-large-land/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-large-land/item_details_buy_fragment.xml
@@ -89,6 +89,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:text="@string/username"
                 android:textSize="24sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/seller"
