--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -86,5 +86,5 @@
     <fragment
         android:id="@+id/itemBoughtFragment"
         android:name="com.example.myapplication.itemLists.ItemBoughtFragment"
-        android:label="ItemBoughtFragment" />
+        android:label="Bought Items" />
 </navigation>
