Loading on main list

--- a/app/src/main/res/layout/fragment_on_sale_list.xml
+++ b/app/src/main/res/layout/fragment_on_sale_list.xml
@@ -34,4 +34,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/btn_loggedout"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="154dp"
+        android:layout_height="140dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline6" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="152dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.20930232"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
