--- a/app/src/main/res/layout-large-land/fragment_on_sale_list.xml
+++ b/app/src/main/res/layout-large-land/fragment_on_sale_list.xml
@@ -44,4 +44,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/btn_loggedout"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="110dp"
+        android:layout_height="129dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline_drawer"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
