--- a/app/src/main/res/layout-land/fragment_show_profile.xml
+++ b/app/src/main/res/layout-land/fragment_show_profile.xml
@@ -37,6 +37,52 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
+            android:id="@+id/reviews_cnt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="0"
+            app:layout_constraintStart_toEndOf="@+id/total_reviews"
+            app:layout_constraintTop_toBottomOf="@+id/userRatingBar" />
+
+        <TextView
+            android:id="@+id/total_reviews"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/totalRev"
+            app:layout_constraintEnd_toEndOf="@+id/userRatingBar"
+            app:layout_constraintStart_toStartOf="@+id/userRatingBar"
+            app:layout_constraintTop_toBottomOf="@+id/userRatingBar" />
+
+        <TextView
+            android:id="@+id/reviews_mean"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="0"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/userRatingBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/userRatingBar"
+            app:layout_constraintTop_toTopOf="@+id/userRatingBar" />
+
+        <RatingBar
+            android:id="@+id/userRatingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:clickable="false"
+            android:focusable="false"
+            android:isIndicator="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/textViewFullNameShowProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -94,14 +140,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.2" />
+            app:layout_constraintGuide_percent="0.26" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.8" />
+            app:layout_constraintGuide_percent="0.86" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
