--- a/app/src/main/res/layout-large-land/fragment_edit_profile.xml
+++ b/app/src/main/res/layout-large-land/fragment_edit_profile.xml
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:text="@string/location_header"
             android:textSize="30sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
             app:layout_constraintEnd_toEndOf="@+id/textViewUsernameEditProfile"
             app:layout_constraintTop_toBottomOf="@+id/textViewUsernameEditProfile" />
 
@@ -93,7 +93,7 @@
             app:layout_constraintGuide_percent="0.2" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline3"
+            android:id="@+id/bottom_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
