--- a/app/src/main/res/layout/profile_card_view.xml
+++ b/app/src/main/res/layout/profile_card_view.xml
@@ -11,6 +11,7 @@
     app:cardUseCompatPadding="false" >
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/card_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -18,10 +19,13 @@
             android:id="@+id/profile_picture_card"
             android:layout_width="71dp"
             android:layout_height="67dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/default_profile_picture"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp"
-            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
